--- a/homework.ipynb
+++ b/homework.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 89,
       "metadata": {
         "id": "5yUvvDLwlSVb"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 90,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 91,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [
         {
@@ -130,7 +130,7 @@
               "0.24"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 92,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 95,
       "metadata": {},
       "outputs": [
         {
@@ -188,7 +188,7 @@
               "3.08"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 95,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 96,
       "metadata": {},
       "outputs": [
         {
@@ -350,7 +350,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 96,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -364,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 98,
       "metadata": {},
       "outputs": [
         {
@@ -391,7 +391,7 @@
               "0.25"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 98,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 99,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -435,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [
         {
@@ -444,7 +444,7 @@
               "0.0004783"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 101,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -467,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 102,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -491,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 104,
       "metadata": {},
       "outputs": [
         {
@@ -500,7 +500,7 @@
               "0.9"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 104,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -522,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 105,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -537,13 +537,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 106,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p6 = 1.9145"
+        "p6 = -sum(p * math.log2(p) for p in q6.values())"
       ]
     },
     {
@@ -555,16 +555,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 107,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "1.9145"
+              "1.9139037172696836"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -588,7 +588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 108,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -618,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -629,7 +629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [
         {
@@ -638,7 +638,7 @@
               "1.9407546870999999"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -662,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -701,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 112,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -719,7 +719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 113,
       "metadata": {},
       "outputs": [
         {
@@ -728,7 +728,7 @@
               "np.float64(3.1793252926677353)"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -751,7 +751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 114,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -763,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 115,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -774,7 +774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 116,
       "metadata": {},
       "outputs": [
         {
@@ -783,7 +783,7 @@
               "2.75"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 116,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -806,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 117,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -824,7 +824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 118,
       "metadata": {},
       "outputs": [
         {
@@ -833,7 +833,7 @@
               "0.3"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 118,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -854,7 +854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 119,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -869,7 +869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 120,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -887,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 121,
       "metadata": {},
       "outputs": [
         {
@@ -896,7 +896,7 @@
               "0.7"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -919,7 +919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 122,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -957,7 +957,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 124,
       "metadata": {},
       "outputs": [
         {
@@ -977,7 +977,7 @@
               "6.25"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 124,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 125,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1024,7 +1024,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 126,
       "metadata": {},
       "outputs": [
         {
@@ -1033,7 +1033,7 @@
               "0.0"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 126,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1044,7 +1044,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 127,
       "metadata": {},
       "outputs": [
         {
@@ -1053,7 +1053,7 @@
               "0.0"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 127,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1064,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 128,
       "metadata": {},
       "outputs": [
         {
@@ -1073,7 +1073,7 @@
               "0.25"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1084,7 +1084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 129,
       "metadata": {},
       "outputs": [
         {
@@ -1093,7 +1093,7 @@
               "0.5"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1104,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 130,
       "metadata": {},
       "outputs": [
         {
@@ -1113,7 +1113,7 @@
               "0.75"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 130,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [
         {
@@ -1133,7 +1133,7 @@
               "1.0"
             ]
           },
-          "execution_count": 50,
+          "execution_count": 131,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1144,7 +1144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 132,
       "metadata": {},
       "outputs": [
         {
@@ -1153,7 +1153,7 @@
               "1.0"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 132,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1176,7 +1176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 133,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1206,7 +1206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 134,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1236,13 +1236,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 135,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p14 = 4.4842"
+        "p14 = np.mean(q14a) + np.mean(q14b)\n"
       ]
     },
     {
@@ -1254,16 +1254,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "4.4842"
+              "np.float64(2.6611238258)"
             ]
           },
-          "execution_count": 57,
+          "execution_count": 136,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1283,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1302,7 +1302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 138,
       "metadata": {},
       "outputs": [
         {
@@ -1312,7 +1312,7 @@
               " 'Sorry',\n",
               " 'Sorry',\n",
               " 'Sorry',\n",
-              " 'You win!',\n",
+              " 'Sorry',\n",
               " 'Sorry',\n",
               " 'Sorry',\n",
               " 'Sorry',\n",
@@ -1320,7 +1320,7 @@
               " 'Sorry']"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 138,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1351,7 +1351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 139,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1392,7 +1392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 140,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1410,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 141,
       "metadata": {},
       "outputs": [
         {
@@ -1419,7 +1419,7 @@
               "-3"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 141,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1449,7 +1449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 142,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1460,7 +1460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 143,
       "metadata": {},
       "outputs": [
         {
@@ -1469,7 +1469,7 @@
               "2.5"
             ]
           },
-          "execution_count": 70,
+          "execution_count": 143,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1499,7 +1499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 144,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1510,7 +1510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 145,
       "metadata": {},
       "outputs": [
         {
@@ -1519,7 +1519,7 @@
               "2.75"
             ]
           },
-          "execution_count": 72,
+          "execution_count": 145,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1546,7 +1546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1558,7 +1558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 147,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1570,16 +1570,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 148,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(7.584174323972332)"
+              "np.float64(7.555597995372154)"
             ]
           },
-          "execution_count": 75,
+          "execution_count": 148,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1605,7 +1605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 149,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1617,7 +1617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 150,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1628,7 +1628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 151,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1642,7 +1642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 152,
       "metadata": {},
       "outputs": [],
       "source": [
